# clawside

./: .env.example  .gitignore  LICENSE  Makefile  README.md  README_zh.md  create_telegram_agent.py  pyproject.toml
container/: Dockerfile  build.sh  requirements.txt
container/agent_runner/: agent.py  config.py  formatter.py  history.py  main.py  mcp_manager.py  poll_loop.py  skill_loader.py
container/agent_runner/db/: connection.py  messages_in.py  messages_out.py  session_routing.py  session_state.py
container/agent_runner/mcp_servers/: clawside.py
container/skills/self-customize/: SKILL.md
container/skills/telegram-formatting/: SKILL.md
container/skills/welcome/: SKILL.md
src/: bootstrap.py  circuit_breaker.py  command_gate.py  config.py  container_config.py  container_runner.py  delivery.py  group_init.py  log.py  main.py  router.py  session_manager.py  sweep.py
src/channels/: adapter.py  cli.py  telegram.py
src/cli/: commands.py  server.py
src/db/: agent_destinations.py  agent_groups.py  connection.py  container_configs.py  dropped_messages.py  messaging_groups.py  schema.py  session_db.py  sessions.py  users.py
src/db/migrations/: 001_initial.py  __init__.py
src/modules/permissions/: access.py
src/modules/scheduling/: __init__.py  db.py  recurrence.py
src/modules/typing/: indicator.py
