[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clawside"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=21.0",
    "structlog>=24.0",
    "python-dotenv>=1.0",
    "croniter>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]
